WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307127
[YARR] Fix stale captures in FixedCount groups in MatchOnly mode
https://bugs.webkit.org/show_bug.cgi?id=307127
Summary
[YARR] Fix stale captures in FixedCount groups in MatchOnly mode
Sosuke Suzuki
Reported
2026-02-05 18:46:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-05 18:48:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58017
EWS
Comment 2
2026-02-05 20:23:23 PST
Committed
306920@main
(dea6808af40e): <
https://commits.webkit.org/306920@main
> Reviewed commits have been landed. Closing PR #58017 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-05 20:24:14 PST
<
rdar://problem/169767671
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug