[YARR] Fix stale captures in FixedCount groups in MatchOnly mode https://bugs.webkit.org/show_bug.cgi?id=307127

Reviewed by Yusuke Suzuki.

When backreferences are used in MatchOnly mode (.test()), the JIT uses
internal frame storage for subpattern data (m_needsInternalSubpatternOutput).

However, the capture-clearing code at the start of each FixedCount iteration
checked m_compileMode == IncludeSubpatterns instead of shouldRecordSubpatterns(),
so captures were not cleared between iterations in MatchOnly mode.

This caused stale capture values from a previous iteration to be visible to
backreferences. For example, /(?:(a)|(b)){2}\2/.test("ba") returned false
instead of true, because capture[2] retained "b" from iteration 1 into
iteration 2 where it should have been undefined.

Test: JSTests/stress/regexp-fixedcount-matchonly-stale-capture.js

* JSTests/stress/regexp-fixedcount-matchonly-stale-capture.js: Added.
(shouldBe):
(re.a):
(re2.a):
* Source/JavaScriptCore/yarr/YarrJIT.cpp:

Canonical link: https://commits.webkit.org/306920@main